# Robotics

ex01/: commands.txt
lab_2/ex01/: .bashrc  ex01.txt
lab_2/ex03/mytopic/: CMakeLists.txt  package.xml
lab_2/ex03/mytopic/src/: my_node.cpp
lab_2/ex04/: colcon_build.txt
lab_2/ex05/: rosnode_info.txt  rosnode_list.txt
lab_2/ex06/: cmd_vel.txt
lab_2/ex08/: three_turtles.launch
lab_2/ex09/: CMakeLists.txt  package.xml
lab_2/ex09/log/: latest_edit
lab_2/ex09/srv/: .full_name_sum_service.srv.swp
lab_2/ex10/text_to_cmd_vel/: CMakeLists.txt  package.xml
lab_2/ex10/text_to_cmd_vel/src/: sub.cpp
lab_3/ex01/fullnameservice/: CMakeLists.txt  package.xml
lab_3/ex01/service_full_name/: CMakeLists.txt  package.xml
lab_3/ex01/service_full_name/src/: client.cpp  service.cpp
lab_3/ex02/action_messages/: CMakeLists.txt  package.xml
lab_3/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
lab_3/ex02/action_turtle_commands/src/: action_turtle_client.cpp  action_turtle_server.cpp  server.cpp
lab_3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap_0.mcap
lab_3/ex04/: doctor.txt
lab_3/ex05/move_to_goal/: package.xml  setup.py
lab_3/ex05/move_to_goal/move_to_goal/: move_to_goal_server.py
lab_4/ex01/: last_transform.txt  transform.txt
lab_4/ex02/: carrot.rviz
lab_4/ex02/two_turtles_one_carrot/: package.xml  setup.py
lab_4/ex02/two_turtles_one_carrot/launch/: carrot.launch.py  turtles.launch.py
lab_4/ex02/two_turtles_one_carrot/two_turtles_one_carrot/: broadcaster.py  carrot.py  listener.py
lab_4/ex03/time_race/: package.xml  setup.py
lab_4/ex03/time_race/launch/: race.launch.py
lab_4/ex03/time_race/time_race/: listener.py
lab_5/ex01/: robot_display.launch
lab_5/ex02/: robot.urdf.xacro  robot_display.launch
lab_5/ex03/: robot.urdf.xacro
lab_5/ex04/: circle_movement.launch.py
lab_5/ex04/robot_description/urdf/: gazebo.urdf.xacro
lab_5/ex05/circle_movement/: package.xml  setup.py
lab_5/ex05/robot_description/urdf/: robot.urdf.xacro
lab_5/ex05/unique_movements/: package.xml  setup.py
lab_5/ex05/unique_movements/launch/: mov.launch.py
lab_5/ex05/unique_movements/unique_movements/: movements.py
lab_6/ex01/: robot.urdf.xacro
lab_6/ex02/: gazebo.urdf.xacro
lab_6/ex03/: robot.urdf.xacro
lab_6/ex04/robot_description/urdf/: depth.urdf.xacro
lab_6/ex04/stop_or_die/: package.xml  setup.py
lab_6/ex04/stop_or_die/launch/: sod_d.launch.py  sod_l.launch.py
lab_6/ex05/: 4_box.sdf
lab_6/ex05/robot_bringup/launch/: 4_box.launch.py
lab_6/ex05/robot_description/urdf/: gazebo.urdf.xacro
lab_6/ex05/stop_or_die/: setup.cfg
lab_6/ex05/stop_or_die/stop_or_die/: stop_sub_depth.py  stop_sub_lidar.py
lab_7/ex01/: map_tugbot_warehouse.pgm  map_tugbot_warehouse.yaml
